--- a/_posts/2019-02-15-BIvsBI.md
+++ b/_posts/2019-02-15-BIvsBI.md
@@ -1,11 +1,11 @@
 ---
 title: "BI tradicional o autoservicio: ¿cuál es la diferencia?"
 exerpt: "Existen dos enfoques  en las soluciones de BI que son opuestos desde la perspectiva de la gobernabilidad de los datos "
-author: "True"
+author: "Esteban Londono"
 classes: wide
 header:
-  overlay_image: assets/images/wtablet.jpg
-  teaser: assets/images/cvs.jpg
+  overlay_image: assets/images/wide/wtablet.jpg
+  teaser: assets/cuadrado/images/cvs.jpg
 categories:
   - BI
 ---
