--- a/_posts/2019-02-15-BIvsBI.md
+++ b/_posts/2019-02-15-BIvsBI.md
@@ -1,6 +1,6 @@
 ---
 title: "BI tradicional o autoservicio: ¿cuál es la diferencia?"
-exerpt: "Existen dos enfoques  en las soluciones de BI que son opuestos desde la perspectiva de la gobernabilidad de los datos "
+excerpt: "Existen dos enfoques  en las soluciones de BI que son opuestos desde la perspectiva de la gobernabilidad de los datos "
 author: "Esteban Londono"
 classes: wide
 header:
