--- a/_posts/2019-02-15-BIvsBI.md
+++ b/_posts/2019-02-15-BIvsBI.md
@@ -1,11 +1,13 @@
 ---
+layout: single
+classes: wide
+author_profile: true
+author: Juan David Trochez
 title: "BI tradicional o autoservicio: ¿cuál es la diferencia?"
 excerpt: "Existen dos enfoques  en las soluciones de BI que son opuestos desde la perspectiva de la gobernabilidad de los datos "
-author: "Esteban Londono"
-classes: wide
 header:
   overlay_image: assets/images/wide/wtablet.jpg
-  teaser: assets/cuadrado/images/cvs.jpg
+  teaser: assets/images/cuadrado/vs.jpg
 categories:
   - BI
 ---
