Mejora articulo gobernabilidad en Power bi

--- a/_posts/2019-02-15-BIvsBI.md
+++ b/_posts/2019-02-15-BIvsBI.md
@@ -3,8 +3,8 @@ layout: single
 classes: wide
 author_profile: true
 author: Juan David Trochez
-title: "BI tradicional o autoservicio: ¿cuál es la diferencia?"
-excerpt: "Existen dos enfoques  en las soluciones de BI que son opuestos desde la perspectiva de la gobernabilidad de los datos "
+title: "La Gobernabilidad en Business Intelligence "
+excerpt: "Cuales es la Diferencia entre los enfoques de Business Intelligence Autoservicio y Corporativo "
 header:
   overlay_image: assets/images/wide/wtablet.jpg
   teaser: assets/images/cuadrado/vs.jpg
@@ -14,11 +14,11 @@ categories:
 
 Las aplicaciones de autoservicio de BI permiten a los usuarios concentrarse en sus preguntas sin necesidad de crear soluciones elaboradas, y les permite obtener la información que necesitan lo antes posible, sin tener que esperar a que el personal de TI los ayude.
 
-Lento. Inflexible. Pérdida de tiempo. ¿Suena como una forma sensata de obtener la información empresarial que necesitan los usuarios para hacer su trabajo? Hace unos años, esta podría haber sido la única opción para la inteligencia empresarial, pero ahora hay una bifurcación en el camino. Los usuarios pueden ir por un lado con BI centralizado administrado por su departamento de TI, o pueden ponerse en contacto con las modernas soluciones de BI que pueden usar por sí mismos. Como puede imaginar, en el debate tradicional vs autoservicio de BI, hay ventajas y desventajas que deben considerarse antes de tomar una decisión.
+Lento. Inflexible. Pérdida de tiempo. ¿Suena como una forma sensata de obtener la información empresarial que necesitan los usuarios para hacer su trabajo? Hace unos años, esta podría haber sido la única opción para la inteligencia empresarial, pero ahora hay una bifurcación en el camino. Los usuarios pueden ir por un lado con BI centralizado administrado por su departamento de TI, o pueden ponerse en contacto con las modernas soluciones de BI que pueden usar por sí mismos. Como puede imaginar, en el debate Corporativo vs autoservicio de BI, hay ventajas y desventajas que deben considerarse antes de tomar una decisión.
 
-### ¿Es BI tradicional la respuesta?
+### ¿Es BI Corporativo la respuesta?
 
-Tomemos el enfoque tradicional primero. Hay razones para que exista este entorno BI controlado. Cuando controla los datos y la aplicación de BI, tiene la posibilidad de controlar la calidad de los resultados. Los departamentos de TI preocupados por la calidad (es decir, cada departamento de TI concienzudo) pueden asegurarse de que los datos estén preparados, almacenados y protegidos de forma adecuada. Pueden crear sistemas que ofrecen informes de autoservicio escalables y estandarizados, y pueden dar a los usuarios respuestas a sus preguntas comerciales. Por supuesto, esas respuestas pueden tardar un poco en materializarse, especialmente si el departamento de TI está ocupado con otros proyectos. O si la tasa de crecimiento de datos (y big data) comienza a superar los recursos del departamento de TI para su manejo.
+Tomemos el enfoque Corporativo primero. Hay razones para que exista este entorno BI controlado. Cuando controla los datos y la aplicación de BI, tiene la posibilidad de controlar la calidad de los resultados. Los departamentos de TI preocupados por la calidad (es decir, cada departamento de TI concienzudo) pueden asegurarse de que los datos estén preparados, almacenados y protegidos de forma adecuada. Pueden crear sistemas que ofrecen informes de autoservicio escalables y estandarizados, y pueden dar a los usuarios respuestas a sus preguntas comerciales. Por supuesto, esas respuestas pueden tardar un poco en materializarse, especialmente si el departamento de TI está ocupado con otros proyectos. O si la tasa de crecimiento de datos (y big data) comienza a superar los recursos del departamento de TI para su manejo.
 
 ### La Alternativa de Autoservicio BI
 La Alternativa de Autoservicio BI
@@ -27,10 +27,10 @@ Entonces, ¿qué hay del enfoque de autoservicio? Ahora hay numerosas herramient
 Aprenda a calcular el costo de la inteligencia empresarial con nuestra guía paso a paso gratuita.
 
 ### ¿Qué hay de ambos?
-Pero tal vez la representación de BI tradicional vs. autoservicio como una bifurcación en el camino no es realista. Una organización puede necesitar ambos tipos de inteligencia de negocios. El informe funcional sobre las operaciones comerciales diarias sigue siendo un requisito común, incluso si ahora es una parte más pequeña de la imagen general de BI. Los informes de cumplimiento y el tablero, por ejemplo, todavía son necesarios. Además, una vez que están configuradas, estas funciones a menudo se ejecutan alegremente con poca o ninguna intervención. La BI tradicional todavía tiene un papel que desempeñar en la respuesta a preguntas sobre lo que sucedió en el pasado o sobre lo que está sucediendo con las operaciones ahora. En comparación, para preguntas sobre el futuro, especialmente las preguntas de estilo "qué pasaría si", los usuarios quieren más poder individual y tiempos de reacción más rápidos que los que el BI tradicional está diseñado para darles. En este caso, el autoservicio puede ser preferible.
+Pero tal vez la representación de BI Corporativo vs. autoservicio como una bifurcación en el camino no es realista. Una organización puede necesitar ambos tipos de inteligencia de negocios. El informe funcional sobre las operaciones comerciales diarias sigue siendo un requisito común, incluso si ahora es una parte más pequeña de la imagen general de BI. Los informes de cumplimiento y el tablero, por ejemplo, todavía son necesarios. Además, una vez que están configuradas, estas funciones a menudo se ejecutan alegremente con poca o ninguna intervención. La BI Corporativo todavía tiene un papel que desempeñar en la respuesta a preguntas sobre lo que sucedió en el pasado o sobre lo que está sucediendo con las operaciones ahora. En comparación, para preguntas sobre el futuro, especialmente las preguntas de estilo "qué pasaría si", los usuarios quieren más poder individual y tiempos de reacción más rápidos que los que el BI Corporativo está diseñado para darles. En este caso, el autoservicio puede ser preferible.
 
 ### Averiguar ese tenedor en el camino
-Esto recuerda el consejo de un experto que dijo: "Cuando vengas a la bifurcación en el camino, ¡tómalo!" Esta afirmación aparentemente sin sentido ahora comienza a tener sentido. La forma en que "tome la bifurcación en el camino" y navegue entre BI tradicional y autoservicio dependerá de varios factores. La identificación de casos de uso de BI de autoservicio adecuados es un factor. Los niveles de usuario de negocios de la comprensión de BI es otro. También lo son la gobernabilidad de los datos y los aspectos comunes (o no) de los sistemas de BI Miramos a cada uno a su vez, a continuación.
+Esto recuerda el consejo de un experto que dijo: "Cuando vengas a la bifurcación en el camino, ¡tómalo!" Esta afirmación aparentemente sin sentido ahora comienza a tener sentido. La forma en que "tome la bifurcación en el camino" y navegue entre BI Corporativo y autoservicio dependerá de varios factores. La identificación de casos de uso de BI de autoservicio adecuados es un factor. Los niveles de usuario de negocios de la comprensión de BI es otro. También lo son la gobernabilidad de los datos y los aspectos comunes (o no) de los sistemas de BI Miramos a cada uno a su vez, a continuación.
 
 ### ¿Qué casos de uso de BI de autoservicio tienen sentido?
 Gran parte de la demanda de autoservicio de BI se debe al caso de uso general de la necesidad de respuestas en un apuro. Ejemplos específicos podrían ser:
@@ -49,4 +49,4 @@ El autoservicio de BI no puede ser a expensas de la claridad o la confianza en l
 El costo es un factor para la mayoría de las empresas y organizaciones. Mientras que en el pasado es posible que no haya tenido otra opción más que pagar por separado el hardware y el software, ahora hay una mejor manera. En lugar de las líneas de ensamblaje más antiguas o los enfoques de sistemas heredados, las empresas ahora pueden pasar a un enfoque de BI de pila única que proporciona BI para satisfacer a los usuarios avanzados en el departamento de TI, así como a los usuarios comerciales no técnicos. Una vez más, "Cuando vengas a la bifurcación en el camino, ¡tómala!"
 
 ### El futuro de la inteligencia de negocios es el autoservicio
-Incluso si tanto el BI tradicional como el de autoservicio continuarán coexistiendo, el aumento constante de los volúmenes de datos y la aceleración de las necesidades comerciales significarán que los usuarios finales harán una parte cada vez más grande del BI por sí mismos. Las buenas aplicaciones de autoservicio de BI permitirán a los usuarios concentrarse en sus preguntas comerciales sin necesidad de crear soluciones elaboradas, y obtener la información y las respuestas que necesitan de inmediato, sin tener que esperar a que personal especializado de TI los ayude.
+Incluso si tanto el BI Corporativo como el de autoservicio continuarán coexistiendo, el aumento constante de los volúmenes de datos y la aceleración de las necesidades comerciales significarán que los usuarios finales harán una parte cada vez más grande del BI por sí mismos. Las buenas aplicaciones de autoservicio de BI permitirán a los usuarios concentrarse en sus preguntas comerciales sin necesidad de crear soluciones elaboradas, y obtener la información y las respuestas que necesitan de inmediato, sin tener que esperar a que personal especializado de TI los ayude.
