--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,11 +1,11 @@
 ---
-title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+title: "Página no encontrada"
+excerpt: ""
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Lo sentimos, pero la página que estaba intentando ver no existe, tal vez pueda intentar buscarla a continuación.
 
 <script>
   var GOOG_FIXURL_LANG = 'es';
