--- a/_posts/2019-03-01-Que es BI.md
+++ b/_posts/2019-03-01-Que es BI.md
@@ -6,8 +6,8 @@ author: Esteban Londono
 title: "¿Que es Business Intelligence?"
 excerpt: "Más de 20 formas de entender el business Intelligence para su empresa"
 header:
-  overlay_image: assets/images/wide/wpbi.jpg
-  teaser: assets/images/logos/IPBI.jpg
+  overlay_image: assets/images/wide/Biconcept.jpg
+  teaser: assets/images/cuadrado/BI4.jpg
 categories:
   - Introduccion
 ---
