--- a/_posts/2019-03-01-Que es BI.md
+++ b/_posts/2019-03-01-Que es BI.md
@@ -11,11 +11,11 @@ header:
 categories:
   - Introduccion
 ---
-La industria de la inteligencia empresarial es un espacio en rápida evolución que continúa mostrando un fuerte crecimiento interanual sin signos evidentes de desaceleración. Al igual que con cualquier término tan importante como BI, hay mucha confusión sobre qué es y cómo puede aplicarse a su negocio. Para ayudarlo a comprender este término, hemos recopilado definiciones de BI de toda la web para compartir con usted.
+La industria del Business Intelligence es un espacio en rápida evolución que continúa mostrando un fuerte crecimiento interanual sin signos evidentes de desaceleración. Al igual que con cualquier término tan importante como BI, hay mucha confusión sobre qué es y cómo puede aplicarse a su negocio. Para ayudarlo a comprender este término, hemos recopilado definiciones de BI de toda la web para compartir con usted.
 
 ## Definiciones de Business Intelligence
 
-Comencemos con el principal resultado de Google. 
+Comencemos con el principal resultado de Google.
 
 - **Wikipedia:** "Business intelligence (BI) es un conjunto de teorías, metodologías, procesos, arquitecturas y tecnologías que transforman datos sin procesar en información significativa y útil para fines comerciales. BI puede manejar grandes cantidades de información para ayudar a identificar y desarrollar nuevas oportunidades. Hacer uso de nuevas oportunidades e implementar una estrategia efectiva puede proporcionar una ventaja competitiva en el mercado y una estabilidad a largo plazo ".
 
@@ -62,6 +62,9 @@ El business Intelligence tiene un impacto tan positivo en las personas de una or
 6. Identificar y analizar áreas para reducir costos y para la asignación de presupuesto.
 7. Aumente la productividad interna gastando tiempo en lo que es importante.
 
+![](/assets/images/post/queesbi/personas-KPI.svg)
+
+
 ## ¿Cómo sé cuándo usar Business Intelligence para mi negocio?
 
 Todas las organizaciones se beneficiarán de Business Intelligence, pero aquí hay algunos indicadores claros de que debe consideraral revisar una tecnología de Business Intelligence para su negocio:
@@ -94,5 +97,5 @@ Otros dicen que el  Business Analytics, como  el Business Intelligence , recopil
 
 Esta perspectiva establece que la diferencia clave es que las soluciones de aBusiness Analytics utilizan el análisis predictivo para resolver problemas antes de que ocurran, mientras que BI permite a las organizaciones realizar un seguimiento en tiempo real para identificar los problemas y oportunidades actuales. Las soluciones de Business Intelligence pueden ser más óptimas para las organizaciones que están satisfechas con su modelo de negocio y que desean principalmente mejorar las operaciones, aumentar la eficiencia y cumplir los objetivos de la organización para hacer un buen cambio.
 
-**¿Listo para comenzar?**
- ***Alcance un nivel completamente nuevo de toma de decisiones basada en datos con CepoBIA como su aliado***
+#¿Listo para comenzar?
+**Alcance un nivel completamente nuevo de toma de decisiones basada en datos con CepoBIA como su aliado**
