Filter in overlay and cha

--- a/_posts/2019-03-15-BIvsBI.md
+++ b/_posts/2019-03-15-BIvsBI.md
@@ -6,6 +6,8 @@ author: Juan David Trochez
 title: "La Gobernabilidad en Business Intelligence "
 excerpt: "Cuales es la Diferencia entre los enfoques de Business Intelligence Tecnico y Autoservicio "
 header:
+  overlay_color: "#000"
+  overlay_filter: "0.5"
   overlay_image: assets/images/wide/wtablet.jpg
   teaser: assets/images/cuadrado/vs.jpg
 categories:
