--- a/_posts/2019-03-01-Que es BI.md
+++ b/_posts/2019-03-01-Que es BI.md
@@ -6,6 +6,8 @@ author: Esteban Londono
 title: "¿Que es Business Intelligence?"
 excerpt: "Más de 20 formas de entender el business Intelligence para su empresa"
 header:
+  overlay_color: "#000"
+  overlay_filter: "0.5"
   overlay_image: assets/images/wide/BIConcept.jpg
   teaser: assets/images/cuadrado/BI4.jpg
 categories:
