--- a/_posts/2019-03-15-BIvsBI.md
+++ b/_posts/2019-03-15-BIvsBI.md
@@ -18,6 +18,8 @@ Las aplicaciones de autoservicio de BI permiten a los usuarios concentrarse en s
 
 Lento. Inflexible. Pérdida de tiempo. ¿Suena como una forma sensata de obtener la información empresarial que necesitan los usuarios para hacer su trabajo? Hace unos años, esta podría haber sido la única opción para la inteligencia empresarial, pero ahora hay una bifurcación en el camino. Los usuarios pueden ir por un lado con BI centralizado administrado por su departamento de TI, o pueden ponerse en contacto con las modernas soluciones de BI que pueden usar por sí mismos. Como puede imaginar, en el debate BI Técnico vs autoservicio de BI, hay ventajas y desventajas que deben considerarse antes de tomar una decisión.
 
+![](/assets/images//cuadrado/vs.jpg)
+
 ### ¿Es BI Técnico la respuesta?
 
 Tomemos el enfoque Técnico primero. Hay razones para que exista este entorno de BI controlado. Cuando controla los datos y la aplicación de BI, tiene la posibilidad de controlar la calidad de los resultados. Los departamentos de TI preocupados por la calidad (es decir, cada departamento de TI concienzudo) pueden asegurarse de que los datos estén preparados, almacenados y protegidos de forma adecuada. Pueden crear sistemas que ofrecen informes de autoservicio escalables y estandarizados, y pueden dar a los usuarios respuestas a sus preguntas comerciales. Por supuesto, esas respuestas pueden tardar un poco en materializarse, especialmente si el departamento de TI está ocupado con otros proyectos. O si la tasa de crecimiento de datos (y big data) comienza a superar los recursos del departamento de TI para su manejo.
