changes images articulo

--- a/_posts/2019-09-15 El Versus.md
+++ b/_posts/2019-09-15 El Versus.md
@@ -8,8 +8,8 @@ excerpt: "Comparación entre Power BI , Qlikview y Tableau . No hay un ganador a
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
-  overlay_image: assets/images/wide/Powers.jpg
-  teaser: assets/images/cuadrado/ETL.png
+  overlay_image: assets/images/wide/wtablet.jpg
+  teaser: assets/images/cuadrado/power-bi-vs-tableau-vs-qlik-1.jpg
 categories:
   - Introduccion
 ---
