--- a/_posts/2019-09-15-El Versus.md
+++ b/_posts/2019-09-15-El Versus.md
@@ -3,7 +3,7 @@ layout: single
 classes: wide
 author_profile: true
 author: Esteban Londono
-title: "Power BI Vs Qlikview vs. Tableau "
+title: "Power BI Vs. Tableau Vs. Qlik  "
 excerpt: "Comparación entre Power BI , Qlikview y Tableau . No hay un ganador absoluto de este top 3."
 header:
   overlay_color: "#000"
@@ -19,7 +19,7 @@ Los datos se utilizan cada vez más en toda la empresa, para que los empleados t
 Para descubrir todo el poder de los datos, las herramientas de descubrimiento y visualización de datos son indispensables. En los últimos años, mucho ha cambiado en el panorama de Data Analytics. Hoy en día esto también se llama el BI moderno.
 Las aplicaciones modernas de BI han tomado un vuelo enorme. Las tres partes que dominan este mercado son Power BI (Microsoft), Tableau (Salesforce) y Qlik (Sense and View). Pero, ¿qué solución se adapta mejor a tus ambiciones? En este blog mostramos las fortalezas y debilidades de los tres líderes del mercado. La imagen a continuación muestra cómo los tres líderes del mercado se han desarrollado en los últimos años basados en el Cuadrante Mágico de Gartner *.
 
-![Cuadrante Gartner BI 2019](/assets/images/post/versus/MQ_BI20192.jpg)
+![Cuadrante Gartner BI 2019](assets/images/post/versus/MQ_BI20192.jpg)
 
 ## Power BI vs Tableau vs Qlik
 
@@ -36,20 +36,10 @@ Las ventajas distintivas:
 - Aspecto simple.
 - Integración de oficina.
 - Estructura de licencia simple.
+
 Sin embargo, Power BI también tiene puntos de atención:
 
 - Posibilidades limitadas para el modelado de datos.
-
-### Qlik “El Producto robusto”
-
-Qlik es una plataforma de descubrimiento de datos que ofrece BI de autoservicio. La razón por la cual Qlik ocupa un lugar destacado en la lista de organizaciones es porque es un producto robusto. Ofrece varios beneficios:
-
-- Admite visualizaciones seleccionadas
-- Comunidad cercana de usuarios y socios;
-- Estructura sólida de derechos de usuario.
-Los puntos de atención de Qlik son:
-- A menudo limitado para análisis ad hoc simples, informes simples y para tablero de instrumentos.
-- Modelo de licencia complejo. El modelo de licencia de Qlik se ha cambiado a un modelo con el que puede asignar tokens a varios usuarios y no a un usuario con nombre. Sin embargo, en la práctica, a menudo ve que cambiar continuamente los tokens en otro es complejo y requiere mucho tiempo.
 
 #### Tableau - “Visualización de datos”
 
@@ -60,13 +50,28 @@ Ofrece varios beneficios:
 - Adecuado tanto en local como en la nube (o combinación);
 - Marcador de tendencias;
 - Muchas opciones de visualización de datos.
+
 Los puntos de atención de Tableau son:
+
 - En comparación con otros proveedores, Tableau es a menudo la solución más cara.
 - Posibilidades limitadas con problemas complejos de modelado de datos.
 - Visión limitada y hoja de ruta. En los últimos años, Tableau ya no es el disruptor que solía ser (Esto puede cambiar por la compra por parte de Salesforce)
 
 Con todo, las tres son soluciones maravillosas que dominan el mercado por una buena razón. La diferencia se está haciendo más pequeña. El desarrollo y la evolución de estas plataformas se mantienen afilados y garantizan mejores posibilidades con los datos. Por lo tanto, en última instancia, depende de sus ambiciones y deseos qué solución le conviene más. ¿Estás buscando una comparación más completa entre estas tres herramientas?. ¡Nuestros expertos en análisis están encantados de asesorarlo! Por favor contáctenos.
 
+### Qlik “El Producto robusto”
+
+Qlik es una plataforma de descubrimiento de datos que ofrece BI de autoservicio. La razón por la cual Qlik ocupa un lugar destacado en la lista de organizaciones es porque es un producto robusto. Ofrece varios beneficios:
+
+- Admite visualizaciones seleccionadas
+- Comunidad cercana de usuarios y socios;
+- Estructura sólida de derechos de usuario.
+
+Los puntos de atención de Qlik son:
+
+- A menudo limitado para análisis ad hoc simples, informes simples y para tablero de instrumentos.
+- Modelo de licencia complejo. El modelo de licencia de Qlik se ha cambiado a un modelo con el que puede asignar tokens a varios usuarios y no a un usuario con nombre. Sin embargo, en la práctica, a menudo ve que cambiar continuamente los tokens en otro es complejo y requiere mucho tiempo.
+
 ### Comparativo
 
-![Comparativo herramientas de BI](/assets/images/post/versus/comparativo.png)
+![Comparativo herramientas de BI](assets/images/post/versus/comparativo.png)
