--- a/_posts/2019-09-15-El Versus.md
+++ b/_posts/2019-09-15-El Versus.md
@@ -4,7 +4,7 @@ classes: wide
 author_profile: true
 author: Esteban Londono
 title: "Power BI Vs. Tableau Vs. Qlik  "
-excerpt: "Comparación entre Power BI , Qlikview y Tableau . No hay un ganador absoluto de este top 3."
+excerpt: "Comparación entre Power BI , Qlik y Tableau . No hay un ganador absoluto de este top 3."
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
