--- a/_posts/2019-09-15-El Versus.md
+++ b/_posts/2019-09-15-El Versus.md
@@ -21,11 +21,11 @@ Las aplicaciones modernas de BI han tomado un vuelo enorme. Las tres partes que 
 
 ![Cuadrante Gartner BI 2019](/assets/images/post/Versus/MQ_BI20192.jpg)
 
-## Power BI vs Tableau vs Qlik
+# Power BI vs Tableau vs Qlik
 
 De acuerdo con el estudio las tres partes obtienen buenos resultados en facilidad de uso, visualización de datos, BI móvil, nube y visión empresarial. Qlik tiene una buena puntuación en general, pero está rezagado en el descubrimiento de datos. El precio de Qlik también es una desventaja. Las debilidades de Tableau son la integración de datos, la colaboración o el intercambio de datos y también el precio. Cuando Power BI está rezagado en en el área de tablero y manejo On-premises, sobresale en términos de precio, facilidad de uso y uso compartido de datos.
 
-### Power BI -  “ La Solución de descubrimiento de datos con todas las funciones”
+## Power BI -  “ La Solución de descubrimiento de datos con todas las funciones”
 
 Microsoft ofrece un amplio paquete de opciones de visualización e integración dentro de Power BI. Con Power BI, puede obtener fácilmente información valiosa de sus datos. Power BI ofrece una herramienta para la preparación de datos, descubrimiento de datos y paneles interactivos.
 
@@ -41,7 +41,7 @@ Sin embargo, Power BI también tiene puntos de atención:
 
 - Posibilidades limitadas para el modelado de datos.
 
-#### Tableau - “Visualización de datos”
+## Tableau - “Visualización de datos”
 
 Tableau es una de las herramientas más conocidas en el campo del BI de autoservicio. La posición de Tableau en el lado comercial es una posición extremadamente fuerte. Tradicionalmente, se ve que el BI y la elección del BI moderno todavía es ejecutada por TI. Sin embargo, Tableau a menudo es elegido y seleccionado por la propia empresa.
 
@@ -59,7 +59,7 @@ Los puntos de atención de Tableau son:
 
 Con todo, las tres son soluciones maravillosas que dominan el mercado por una buena razón. La diferencia se está haciendo más pequeña. El desarrollo y la evolución de estas plataformas se mantienen afilados y garantizan mejores posibilidades con los datos. Por lo tanto, en última instancia, depende de sus ambiciones y deseos qué solución le conviene más. ¿Estás buscando una comparación más completa entre estas tres herramientas?. ¡Nuestros expertos en análisis están encantados de asesorarlo! Por favor contáctenos.
 
-### Qlik “El Producto robusto”
+## Qlik “El Producto robusto”
 
 Qlik es una plataforma de descubrimiento de datos que ofrece BI de autoservicio. La razón por la cual Qlik ocupa un lugar destacado en la lista de organizaciones es porque es un producto robusto. Ofrece varios beneficios:
 
@@ -72,6 +72,6 @@ Los puntos de atención de Qlik son:
 - A menudo limitado para análisis ad hoc simples, informes simples y para tablero de instrumentos.
 - Modelo de licencia complejo. El modelo de licencia de Qlik se ha cambiado a un modelo con el que puede asignar tokens a varios usuarios y no a un usuario con nombre. Sin embargo, en la práctica, a menudo ve que cambiar continuamente los tokens en otro es complejo y requiere mucho tiempo.
 
-### Comparativo
+## Comparativo
 
 ![Comparativo herramientas de BI](/assets/images/post/Versus/Comparativo.png)
