--- a/_posts/2019-10-15-Knime.md
+++ b/_posts/2019-10-15-Knime.md
@@ -9,7 +9,7 @@ header:
   overlay_color: "#000"
   overlay_filter: "0.5"
   overlay_image: assets/images/wide/knime.png
-  teaser: assets/images/logos_externos/knime.jpg
+  teaser: assets/images/logos_externos/knime.png
 categories:
   - Data Science
 ---
@@ -28,7 +28,6 @@ Entonces es recomendable Knime?
 En mi opinión, es muy recomendable para realizar análisis de data science de manera rápida y fácil. La curva de aprendizaje es relativamente corta ya que una vez nos adaptamos al flujo de trabajo de nodos las combinación de estos se nos facilita mucho y nos da una perspectiva esquemática de cómo abordar un problema de data science, comenzando con la definición de un repositorio de datos, la lectura de las bases, la creación de querys, la limpieza de los datos, el análisis descriptivo de los datos y por último la utilización de modelos predictivos para generar soluciones en nuestras organizaciones. Y si te quedan dudas aquí te dejo el diagrama gartner que compara las principales herramientas de data mining en el mercado en el 2018, donde Knime se ubica como líder en la industria por encima de muchos open source y programas de licencia paga:
 
 ![Cuadrante data Science](/assets/images/post/knime/cuadrante.png)
-
 
 No se diga más, manos a la obra a instalar KNIME:  https://www.knime.com/downloads
 Algunos recursos didácticos, que incluyen tutoriales y videos en Youtube: https://www.knime.com/resources
