--- a/_posts/2019-10-15-Knime.md
+++ b/_posts/2019-10-15-Knime.md
@@ -14,7 +14,7 @@ categories:
   - Data Science
 ---
 
-*Tal vez una de las frustraciones más comunes de para quienes queremos hacer data science y no provenimos de una formación en disciplinas de ciencias computacionales es la barrera de la programación. La larga curva de aprendizaje para desarrollar habilidad en programación en lenguajes como Python o R desalienta a muchos a realizar análisis de datos basados en machine learning, inteligencia artificial, visualización de data y hasta procesamiento de grandes volúmenes de data.*{: .text-justify}
+Tal vez una de las frustraciones más comunes de para quienes queremos hacer data science y no provenimos de una formación en disciplinas de ciencias computacionales es la barrera de la programación. La larga curva de aprendizaje para desarrollar habilidad en programación en lenguajes como Python o R desalienta a muchos a realizar análisis de datos basados en machine learning, inteligencia artificial, visualización de data y hasta procesamiento de grandes volúmenes de data.
 
 Con este artículo se pretende despejar este oscuro panorama, ¡hay buenas noticias!, afortunadamente existen desarrollos de software que nos permiten hacer data mining y data science sin programación, hoy les vengo a hablar de KNIME. Konstanz Information Mine o mejor conocido como KNIME es un software open source desarrollado en Alemania, programado en Java y con una gran comunidad que aporta nuevas soluciones. Su interfaz está basada en una visualización de los procesos en flujos de nodos, así:
 ![Nodos Knime](/assets/images/post/knime/nodos.png)
