--- a/_posts/2020-06-08-Agile.md
+++ b/_posts/2020-06-08-Agile.md
@@ -3,7 +3,7 @@ layout: single
 classes: wide
 author_profile: true
 author: Juan Gabriel
-title: "MÁS AGILE QUE NUNCAL"
+title: "MÁS AGILE QUE NUNCA"
 excerpt: "Hace tan solo unos meses pensabamos que la “agilidad empresarial” era una más de esas “cosas” que se está poniendo de moda, sin embargo, conforme los diferentes gobiernos y empresas intentan reativar su economía en medio de ésta situación, nos damos cuenta que las metodologías y técnicas de agilismo en los equipos de trabajo, cobran gran valor para poner en marcha estrategias y proyectos de recuperación."
 header:
   overlay_color: "#000"
