--- a/_posts/2020-06-08-Agile.md
+++ b/_posts/2020-06-08-Agile.md
@@ -27,7 +27,7 @@ Habiéndo dicho lo anterior, quiero abordar este artículo de opinión, desde lo
 
 ## 1.	Alínie Negocio – TI: 
 
- es el primer y más importante factor a tener en cuenta en cualquier iniciativa, de esto depende la **transparencia y fluidez** que va a tener el proyecto. La alineación con objetivos estrategicos y el involucramiento de **líderes e interesados** desde la etapa inicial, es clave para lograr el entendimiento común y llegar a resultados rapidos y efectivos.
+ Es el primer y más importante factor a tener en cuenta en cualquier iniciativa, de esto depende la **transparencia y fluidez** que va a tener el proyecto. La alineación con objetivos estrategicos y el involucramiento de **líderes e interesados** desde la etapa inicial, es clave para lograr el entendimiento común y llegar a resultados rapidos y efectivos.
 
 ## 2.	Genere confianza en la solución: 
 
