--- a/_posts/2020-06-08-Agile.md
+++ b/_posts/2020-06-08-Agile.md
@@ -4,7 +4,7 @@ classes: wide
 author_profile: true
 author: Juan Gabriel
 title: "MÁS AGILE QUE NUNCA"
-excerpt: "Hace tan solo unos meses pensabamos que la “agilidad empresarial” era una más de esas “cosas” que se está poniendo de moda, sin embargo, conforme los diferentes gobiernos y empresas intentan reativar su economía en medio de ésta situación, nos damos cuenta que las metodologías y técnicas de agilismo en los equipos de trabajo, cobran gran valor para poner en marcha estrategias y proyectos de recuperación."
+excerpt: "Hace tan solo unos meses pensabamos que la “agilidad empresarial” era una más de esas “cosas” que se está poniendo de moda, sin embargo, conforme los diferentes gobiernos y empresas intentan reactivar su economía en medio de ésta situación, nos damos cuenta que las metodologías y técnicas de agilismo en los equipos de trabajo, cobran gran valor para poner en marcha estrategias y proyectos de recuperación."
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
@@ -15,32 +15,30 @@ categories:
 ---
 ![Esquema Agile](/assets/images/post/Agile/Agilegraf.png)
 
-Recordemos que **Agile**, es una metodología con enfoque iterativo para lograr entregas rapidas, centradas en la colaboración y comunicación con el cliente e interesados.
+Recordemos que **Agile**, es una metodología con enfoque iterativo para lograr entregas rápidas, centradas en la colaboración y comunicación con el cliente e interesados.
 Si quiere recordar o saber cuáles son los 12 principios de agile, consulta el manifiesto official en el siguiente link. https://agilemanifesto.org/
 
-Desde el punto de vista de BI, podemos asegurar que agile debe estar inherente en el desarrollo de proyectos en empresas con un **entorno cambiante y altamente competitivo**, es decir, cualquier empresa en este momento. Lo que conlleva a tener un ritmo de **entrega de valor constante**, mediante productos minimos viables **(MVP)**.
+Desde el punto de vista de BI, podemos asegurar que agile debe estar inherente en el desarrollo de proyectos en empresas con un **entorno cambiante y altamente competitivo**, es decir, cualquier empresa en este momento. Lo que conlleva a tener un ritmo de **entrega de valor constante**, mediante productos mínimos viables **(MVP)**.
 
-Desde **CepoBIA** hemos identificado 4 aspactos imprescindibles en cualquier proyecto Agile de BI y queremos compartirlos contigo:
-
-Habiéndo dicho lo anterior, quiero abordar este artículo de opinión, desde los 3 frentes característicos de la TD:
+Desde **CepoBIA** hemos identificado 4 aspectos imprescindibles en cualquier proyecto Agile de BI y queremos compartirlos contigo:
 
 
 ## 1.	Alínie Negocio – TI: 
 
- Es el primer y más importante factor a tener en cuenta en cualquier iniciativa, de esto depende la **transparencia y fluidez** que va a tener el proyecto. La alineación con objetivos estrategicos y el involucramiento de **líderes e interesados** desde la etapa inicial, es clave para lograr el entendimiento común y llegar a resultados rapidos y efectivos.
+ Es el primer y más importante factor a tener en cuenta en cualquier iniciativa, de esto depende la **transparencia y fluidez** que va a tener el proyecto. La alineación con objetivos estratégicos y el involucramiento de **líderes e interesados** desde la etapa inicial, es clave para lograr el entendimiento común y llegar a resultados rápidos y efectivos.
 
 ## 2.	Genere confianza en la solución: 
 
-en el punto anterior hablamos de la importancia de involucrar líderes funcionales desde el inicio, garantizando con esto la **transferencia del conocimiento de negocio**, y a su vez, identificando las **brechas** que puedan surgir en la solución, de esta forma, cuando se empiecen a liberar las primaras versiones o demos, se habran **mitigado** muchos de los posibles escenarios de falla.
+En el punto anterior hablamos de la importancia de involucrar líderes funcionales desde el inicio, garantizando con esto la **transferencia del conocimiento de negocio**, y a su vez, identificando las **brechas** que puedan surgir en la solución, de esta forma, cuando se empiecen a liberar las primaras versiones o demos, se habrán **mitigado** muchos de los posibles escenarios de falla.
 
 ## 3.	Elija una metodología Ágil para gorbernar el proyecto: 
 
- Existen diferentes alternativas y quizas quiera conbinar las bondedes de una y otra, lo importante es lograr que el equipo del proyecto se **conecte con estas prácticas** y terminen convirtiendose en cultura. **¡Sí lo sé!** Decirlo es más facil que ponerlo en práctica, sin embargo, hay que intentarlo.  Dentro de las metodologías más usadas se encuentran: **Extreme Programming XP:** centrada en la **interación** con el cliente y considera la comunicación continua para desarrollar requerimientos con poco grado de detalle.  **SCRUM:** Enfocada en una estructura de desarrollo **incremental** a traves de Sprints que duran entre 2 y 4 semanas, **Design Sprints:** metodologia utilizada por google, orientada al desarrollo de **prototipos** que se generan en no más de 5 días.
+ Existen diferentes alternativas y quizás quiera conbinar las bondades de una y otra, lo importante es lograr que el equipo del proyecto se **conecte con estas prácticas** y terminen convirtiendose en cultura. **¡Sí lo sé!** Decirlo es más facil que ponerlo en práctica, sin embargo, hay que intentarlo.  Dentro de las metodologías más usadas se encuentran: **Extreme Programming XP:** centrada en la **interación** con el cliente y considera la comunicación continua para desarrollar requerimientos con poco grado de detalle.  **SCRUM:** Enfocada en una estructura de desarrollo **incremental** a través de Sprints que duran entre 2 y 4 semanas, **Design Sprints:** metodología utilizada por google, orientada al desarrollo de **prototipos** que se generan en no más de 5 días.
 
 ## 4.	Elija una herramienta de BI simple y poderosa:
 
- Finalmente este punto es clave para lograr una participación activa de los funciales e interesados y con esto de logra nutrir mejor las soluciones. En el mercado existen muchas opciones de plataformas para BI, sin embargo, algunas requieren de un grado de expertiz para su uso. No obstante, **Power BI** y la suite de **Microsoft (Excel, Power Query, etc)** han demostrado poder y sencilles para usuarios de todo tipo, algo que largo de nuestra experiencia con en las implementaciones hemos podido constatar.
+ Finalmente este punto es clave para lograr una participación activa de los funcionales e interesados y con esto de logra nutrir mejor las soluciones. En el mercado existen muchas opciones de plataformas para BI, sin embargo, algunas requieren de un grado de expertiz para su uso. No obstante, **Power BI** y la suite de **Microsoft (Excel, Power Query, etc)** han demostrado poder y sencilles para usuarios de todo tipo, algo que a lo largo de nuestra experiencia con en las implementaciones hemos podido constatar.
 
 
 ## Conclusión 
-El  poder del **agilismo** en los proyectos de BI,  radica en lograr articular el conocimiento de negocio con tecnología y practicas o metodologías estructuradas, lo que se traduce en entregas rapidas y acertadas.
+El  poder del **agilismo** en los proyectos de BI,  radica en lograr articular el conocimiento de negocio con tecnología y prácticas o metodologías estructuradas, lo que se traduce en entregas rápidas y acertadas.
