--- a/_posts/2020-06-08-Agile.md
+++ b/_posts/2020-06-08-Agile.md
@@ -4,7 +4,7 @@ classes: wide
 author_profile: true
 author: Juan Gabriel
 title: "MÁS AGILE QUE NUNCA"
-excerpt: "Hace tan solo unos meses pensabamos que la “agilidad empresarial” era una más de esas “cosas” que se está poniendo de moda, sin embargo, conforme los diferentes gobiernos y empresas intentan reactivar su economía en medio de ésta situación, nos damos cuenta que las metodologías y técnicas de agilismo en los equipos de trabajo, cobran gran valor para poner en marcha estrategias y proyectos de recuperación."
+excerpt: "Hace tan solo unos meses pensábamos que la “agilidad empresarial” era una más de esas “cosas” que se está poniendo de moda, sin embargo, conforme los diferentes gobiernos y empresas intentan reactivar su economía en medio de ésta situación, nos damos cuenta que las metodologías y técnicas de agilismo en los equipos de trabajo, cobran gran valor para poner en marcha estrategías y proyectos de recuperación."
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
@@ -18,7 +18,7 @@ categories:
 Recordemos que **Agile**, es una metodología con enfoque iterativo para lograr entregas rápidas, centradas en la colaboración y comunicación con el cliente e interesados.
 Si quiere recordar o saber cuáles son los 12 principios de agile, consulta el manifiesto official en el siguiente link. https://agilemanifesto.org/
 
-Desde el punto de vista de BI, podemos asegurar que agile debe estar inherente en el desarrollo de proyectos en empresas con un **entorno cambiante y altamente competitivo**, es decir, cualquier empresa en este momento. Lo que conlleva a tener un ritmo de **entrega de valor constante**, mediante productos mínimos viables **(MVP)**.
+Desde el punto de vista de BI, podemos asegurar que Agile debe estar inherente en el desarrollo de proyectos en empresas con un **entorno cambiante y altamente competitivo**, es decir, cualquier empresa en este momento. Lo que conlleva a tener un ritmo de **entrega de valor constante**, mediante productos mínimos viables **(MVP)**.
 
 Desde **CepoBIA** hemos identificado 4 aspectos imprescindibles en cualquier proyecto Agile de BI y queremos compartirlos contigo:
 
