--- a/_posts/2020-06-08-Agile.md
+++ b/_posts/2020-06-08-Agile.md
@@ -16,7 +16,8 @@ categories:
 ![Esquema Agile](/assets/images/post/Agile/Agilegraf.png)
 
 Recordemos que **Agile**, es una metodología con enfoque iterativo para lograr entregas rápidas, centradas en la colaboración y comunicación con el cliente e interesados.
-Si quiere recordar o saber cuáles son los 12 principios de agile, consulta el manifiesto official en el siguiente link. https://agilemanifesto.org/
+
+*Si quiere recordar o saber cuáles son los 12 principios de agile, consulta el manifiesto oficial en el siguiente link. https://agilemanifesto.org/*
 
 Desde el punto de vista de BI, podemos asegurar que Agile debe estar inherente en el desarrollo de proyectos en empresas con un **entorno cambiante y altamente competitivo**, es decir, cualquier empresa en este momento. Lo que conlleva a tener un ritmo de **entrega de valor constante**, mediante productos mínimos viables **(MVP)**.
 
