--- a/_posts/2020-06-08-Agile.md
+++ b/_posts/2020-06-08-Agile.md
@@ -34,11 +34,11 @@ En el punto anterior hablamos de la importancia de involucrar líderes funcional
 
 ## 3.	Elija una metodología Ágil para gorbernar el proyecto: 
 
- Existen diferentes alternativas y quizás quiera conbinar las bondades de una y otra, lo importante es lograr que el equipo del proyecto se **conecte con estas prácticas** y terminen convirtiendose en cultura. **¡Sí lo sé!** Decirlo es más facil que ponerlo en práctica, sin embargo, hay que intentarlo.  Dentro de las metodologías más usadas se encuentran: **Extreme Programming XP:** centrada en la **interación** con el cliente y considera la comunicación continua para desarrollar requerimientos con poco grado de detalle.  **SCRUM:** Enfocada en una estructura de desarrollo **incremental** a través de Sprints que duran entre 2 y 4 semanas, **Design Sprints:** metodología utilizada por google, orientada al desarrollo de **prototipos** que se generan en no más de 5 días.
+ Existen diferentes alternativas y quizás quiera combinar las bondades de una y otra, lo importante es lograr que el equipo del proyecto se **conecte con estas prácticas** y terminen convirtiendose en cultura. **¡Sí lo sé!** Decirlo es más fácil que ponerlo en práctica, sin embargo, hay que intentarlo.  Dentro de las metodologías más usadas se encuentran: **Extreme Programming XP:** centrada en la **interación** con el cliente y considera la comunicación continua para desarrollar requerimientos con poco grado de detalle.  **SCRUM:** Enfocada en una estructura de desarrollo **incremental** a través de Sprints que duran entre 2 y 4 semanas, **Design Sprints:** metodología utilizada por google, orientada al desarrollo de **prototipos** que se generan en no más de 5 días.
 
 ## 4.	Elija una herramienta de BI simple y poderosa:
 
- Finalmente este punto es clave para lograr una participación activa de los funcionales e interesados y con esto de logra nutrir mejor las soluciones. En el mercado existen muchas opciones de plataformas para BI, sin embargo, algunas requieren de un grado de expertiz para su uso. No obstante, **Power BI** y la suite de **Microsoft (Excel, Power Query, etc)** han demostrado poder y sencilles para usuarios de todo tipo, algo que a lo largo de nuestra experiencia con en las implementaciones hemos podido constatar.
+ Finalmente este punto es clave para lograr una participación activa de los funcionales e interesados y con esto se logra nutrir mejor las soluciones. En el mercado existen muchas opciones de plataformas para BI, sin embargo, algunas requieren de un grado de expertiz para su uso. No obstante, **Power BI** y la suite de **Microsoft (Excel, Power Query, etc)** han demostrado poder y sencilles para usuarios de todo tipo, algo que a lo largo de nuestra experiencia con en las implementaciones hemos podido constatar.
 
 
 ## Conclusión 
